--- a/Layouts/50026 Order Confirmation ITB.rdlc
+++ b/Layouts/50026 Order Confirmation ITB.rdlc
@@ -6807,6 +6807,9 @@ End Function
         <Field Name="BoolYes">
           <DataField>BoolYes</DataField>
         </Field>
+        <Field Name="LevUgeLbl">
+          <DataField>LevUgeLbl</DataField>
+        </Field>
         <Field Name="CompanyInfo2Picture">
           <DataField>CompanyInfo2Picture</DataField>
         </Field>
