--- a/Layouts/50001 Sales DeliveryNote ITB.rdl
+++ b/Layouts/50001 Sales DeliveryNote ITB.rdl
@@ -3117,7 +3117,11 @@
                               </TablixBody>
                               <TablixColumnHierarchy>
                                 <TablixMembers>
-                                  <TablixMember />
+                                  <TablixMember>
+                                    <Visibility>
+                                      <Hidden>true</Hidden>
+                                    </Visibility>
+                                  </TablixMember>
                                   <TablixMember />
                                   <TablixMember />
                                   <TablixMember />
